--- a/gramikom/app/src/main/res/layout/activity_main.xml
+++ b/gramikom/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,24 @@
     tools:context=".MainActivity"
     android:background="#FCEDEA">
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="50dp"
-            android:src="@drawable/account" />
+    <ImageView
+        android:id="@+id/account"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
+        android:src="@drawable/account" />
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="49dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="50dp"
-            android:src="@drawable/notifications" />
+    <ImageView
+        android:id="@+id/notification"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="49dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="50dp"
+        android:src="@drawable/notifications" />
 
         <ImageView
             android:layout_width="50dp"
@@ -40,6 +42,7 @@
         android:layout_marginTop="100dp"
         android:layout_centerHorizontal="true">
         <ImageView
+            android:id="@+id/search"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/search"
